# hass-motion-detection-addon

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  build.gitlab-ci.yml  main.cpp  pyproject.toml  repository.yaml  test_detail_end_to_end.xml  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/actions/end-to-end-test/: action.yml
.github/actions/vcpkg-cache/: action.yml
.github/workflows/: addon.yaml  build-linux.yaml  build-windows.yaml  build.yaml  release.yaml
cmake/: FindDocker.cmake  FindOpenH264.cmake  Pack.cmake
docker/ci/: Dockerfile  build.sh
docker/deploy/: CMakeLists.txt  Dockerfile
hooks/: sync_version.py
include/: Logger.h  WindowsWrapper.h
include/Callback/: AsyncDebouncer.h  AsyncFileSave.h  AsyncHassHandler.h  BaseHassHandler.h  Context.h  Json.h  SyncHassHandler.h  ThreadedHassHandler.h
include/Detector/: Detector.h  MotionDetector.h
include/Gui/: GuiHandler.h  Payload.h  WebHandler.h
include/HomeAssistant/: AsyncHassHandler.h  BaseHassHandler.h  HassHandler.h  Json.h  SyncHassHandler.h  ThreadedHassHandler.h
include/Util/: BufferOperations.h  CurlMultiWrapper.h  CurlWrapper.h  EventHandler.h  ProgramOptions.h  Tools.h
include/VideoSource/: Http.h  Live555.h  RestartWatcher.h  VideoSource.h
motion_detection_addon/: Dockerfile  build.yaml  config.yaml  run.sh
perf/: CMakeLists.txt  UtilPerf.cxx
ports/live555/: CMakeLists.txt  fix-RTSPClient.patch  fix_testOnDemandRTSPServer.patch  portfile.cmake  vcpkg.json
ports/mongoose/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/opencv4/: 0002-install-options.patch  0003-force-package-requirements.patch  0006-fix-uwp.patch  0008-devendor-quirc.patch  0009-fix-protobuf.patch  0011-remove-python2.patch  0013-contrib-fix-ogre.patch  0015-fix-freetype.patch  0016-contrib-fix-freetype.patch  0017-fix-flatbuffers.patch  portfile.cmake  vcpkg.json
src/: main.cxx
src/Callback/: AsyncDebouncer.cxx  AsyncFileSave.cxx  AsyncHassHandler.cxx  BaseHassHandler.cxx  CMakeLists.txt  SyncHassHandler.cxx  ThreadedHassHandler.cxx
src/Detector/: CMakeLists.txt  Detector.cxx  MotionDetector.cxx
src/Gui/: CMakeLists.txt  GuiHandler.cxx  WebHandler.cxx
src/Gui/public/: index.h.in  index.html  index.js  load_feed.js  saved_images.html  saved_images.js  styles.css
src/HomeAssistant/: AsyncHassHandler.cxx  BaseHassHandler.cxx  CMakeLists.txt  HassHandler.cxx  SyncHassHandler.cxx  ThreadedHassHandler.cxx
src/Util/: BufferOperations.cxx  CMakeLists.txt  CurlMultiWrapper.cxx  CurlWrapper.cxx  ProgramOptions.cxx  Tools.cxx
src/VideoSource/: CMakeLists.txt  Http.cxx  Live555.cxx  VideoSource.cxx
tests/: CMakeLists.txt  Live555_IntegrationTest.cxx  LogEnv.h  ServerEnv.h  SimServer.cxx  SimServer.h  TestCallback.cxx  TestCurlWrapper.cxx  TestHassHandler.cxx  TestIntegration.cxx  TestLive555_Integration.cxx  TestLive555_Integration.py  TestMotionDetector.cxx  TestProgramOptions.cxx  TestUtil.cxx  TestVideoSource.cxx  TestWebHandler.cxx  UniquePortTestManip.cmake  main.cxx
tests/end_to_end/: conftest.py  test_end_to_end.py
tests/res/: CanSetupHass.json  Parse1.json  ParseMultiple.json  test.264
